[project]
name = "pypewriter"
version = "0.1.0"
description = "Typewriter effect for your terminal"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/namedottxt/pypewriter"

[tool.poetry]
packages = [{include = "pypewriter", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
